@startuml

title __BOOKMANAGEMENT's Class Diagram__\n

  namespace com.example.bookmanagement {
    class com.example.bookmanagement.AddBookActivity {
        ~ add : Button
        ~ check : Button
        ~ input : EditText
        ~ resDisp : ListView
        ~ scan : Button
        - ISBN : String
        + exec()
        + readFile()
        # onActivityResult()
        # onCreate()
        - checkNeedPermissions()
    }
  }
  

  namespace com.example.bookmanagement {
    class com.example.bookmanagement.BookListActivity {
        ~ recyclerView : RecyclerView
        + onItemClick()
        + readFile()
        + refresh()
        # onCreate()
        - checkNeedPermissions()
    }
  }
  

  namespace com.example.bookmanagement {
    class com.example.bookmanagement.MainActivity {
        # onCreate()
    }
  }
  

  namespace com.example.bookmanagement {
    class com.example.bookmanagement.MyAdapter {
        - mData : List<String>
        - mInflater : LayoutInflater
        + getItemCount()
        + onBindViewHolder()
        + onCreateViewHolder()
        ~ MyAdapter()
        ~ getItem()
        ~ setClickListener()
    }
  }
  

  namespace com.example.bookmanagement {
    interface com.example.bookmanagement.MyAdapter.ItemClickListener {
        {abstract} + onItemClick()
    }
  }
  

  namespace com.example.bookmanagement {
    class com.example.bookmanagement.MyAdapter.ViewHolder {
        ~ myTextView : TextView
        + onClick()
        ~ ViewHolder()
    }
  }
  

  com.example.bookmanagement.AddBookActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.bookmanagement.BookListActivity .up.|> com.example.bookmanagement.MyAdapter.ItemClickListener
  com.example.bookmanagement.BookListActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.bookmanagement.BookListActivity o-- com.example.bookmanagement.MyAdapter : adapter
  com.example.bookmanagement.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.bookmanagement.MyAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.example.bookmanagement.MyAdapter o-- com.example.bookmanagement.MyAdapter.ItemClickListener : mClickListener
  com.example.bookmanagement.MyAdapter +-down- com.example.bookmanagement.MyAdapter.ItemClickListener
  com.example.bookmanagement.MyAdapter +-down- com.example.bookmanagement.MyAdapter.ViewHolder
  com.example.bookmanagement.MyAdapter.ViewHolder .up.|> android.view.View.OnClickListener
  com.example.bookmanagement.MyAdapter.ViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
